# conspiracies

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  faq.html  genindex.html  index.html  installation.html  objects.inv  package-lock.json  pyproject.toml  requirements.txt  run.py  search.html  searchindex.js  setup.cfg
.github/workflows/: dependabot_automerge.yml  documentation.yml  pytest.yml  release.yml  tests.yml
_sources/: faq.rst.txt  index.rst.txt  installation.rst.txt
config/: default.toml  eschatology.toml  template.toml  template_csv.toml  tweets.toml
data/: gold_triplets.jsonl
docs/: conf.py  faq.rst  index.rst  installation.rst
docs/tutorials/: overview.ipynb  requirements.txt
inspector/visualizer/: package-lock.json  package.json
inspector/visualizer/src/: App.tsx
inspector/visualizer/src/datasources/: FileUploadComp.tsx
inspector/visualizer/src/graph/: GraphComp.tsx  GraphService.tsx  GraphViewer.tsx  graph.css  reach-graph-vis.d.ts
paper/: README.md  extract_examples.py  extract_triplets_newspapers.py  extract_triplets_tweets.py  extract_utils.py  network_creation.py  prompt_templates_compare.py  prompt_test.ipynb  test_prompt_relation_extraction.ipynb  test_prompt_speed.ipynb  umap_hdb.py
paper/Triplets-Extraction-GPT/: .gitignore  README.md  requirements.txt  validation_metrics.md
paper/Triplets-Extraction-GPT/src/: create_templates.py  extract.py  extract_triplets.py  extract_triplets_html_tagged.py  print_gpt_output.py  print_gpt_output_by_file.py  print_gpt_output_compare_prompts.py  save_output_comparison_json.py  template_class.py  utils.py
paper/data/: __init__.py  load.py
paper/docs/: data-documentation.md
paper/src/: concat_split_contexts.py  context_threads.py  create_context_threads.py  create_gold_triplets.py  ents_heads_extraction.py  extract_gold_triplets.py  fetch_threads.md  setup_dev.sh  string_matchup.py  sync_data_from_grundtvig_to_ucloud.sh  test.py  threads.py  xml_parser.py
paper/src/data/: __init__.py  load.py
src/conspiracies/: HeadWordExtractionComponent.py  __init__.py  about.py  doc_utils.py  document.py  registry.py  run.py  utils.py  wordpiece_length_normalization.py
src/conspiracies/common/: fileutils.py  modelchoice.py
src/conspiracies/coref/: CoreferenceComponent.py  CoreferenceModel.py  __init__.py  component.py  coref_model.py
src/conspiracies/corpusprocessing/: aggregation.py  clustering.py  triplet.py  umap_hdb.py
src/conspiracies/data/: __init__.py  load.py
src/conspiracies/database/: engine.py  models.py
src/conspiracies/docproc/: doc_utils.py
src/conspiracies/docproc/coref/: __init__.py  coref_comp.py  coref_model.py
src/conspiracies/docproc/relationextraction/: __init__.py
src/conspiracies/docprocessing/: doc_utils.py  docprocessor.py  modeldownload.py
src/conspiracies/docprocessing/coref/: __init__.py  coref_component.py  coref_model.py  safefastcoref.py
src/conspiracies/docprocessing/headwordextraction/: __init__.py
src/conspiracies/docprocessing/relationextraction/: __init__.py  data_classes.py
src/conspiracies/pipeline/: config.py  pipeline.py  runner.py
src/conspiracies/preprocessing/: create_context_threads.py  csv.py  infomedia.py  preprocessor.py  text.py  tweets.py  wordpiece_length_normalization.py
src/conspiracies/prompt_relation_extraction/: __init__.py  data_classes.py  prompt_api.py  prompt_apis.py  prompt_relation_component.py  prompt_templates.py  template_class.py  utils.py  xml_parser.py
src/conspiracies/relationextraction/: __init__.py  dataset.py  extract.py  knowledge_triplets.py  model.py  util.py  wrap_model_spacy.py
src/conspiracies/relationextraction/carb/: carb.py  extraction.py  goldReader.py  gold_relabel.py  matcher.py  oieReader.py  tabReader.py
src/conspiracies/relationextraction/gptprompting/: prompt_apis.py  prompt_utils.py
src/conspiracies/relationextraction/multioie2/: multi2oie_comp.py
src/conspiracies/relationextraction/other/: __init__.py  align.py  bio.py  utils.py
src/conspiracies/visualization/: graph.py
tests/: requirements.txt  test_CoreferenceModel.py  test_clustering.py  test_coref_comp.py  test_coref_model.py  test_csvpreprocessing.py  test_data.py  test_data_classes.py  test_ents_filter.py  test_extentions.py  test_head_extractor.py  test_infomedia_preprocessing.py  test_normalize_to_span.py  test_orms.py  test_pipelineconfig.py  test_preprocessing.py  test_prompt_data_classes.py  test_prompt_relation_evaluate.py  test_prompt_relationextraction_component.py  test_prompt_template_create_prompt.py  test_prompt_template_parse_prompt.py  test_prompt_utils.py  test_relationextraction_component.py  test_relationextraction_utils.py  test_template_classes.py  test_utils.py  test_wp_length_normalization.py  utils.py
tests/test_data/: prompt_data.py  test_config.toml  triplets.jsonl
tutorials/: overview.html
visualizer/: .gitignore  README.md  electron-main.js  package-lock.json  package.json
visualizer/backend/: package-lock.json  package.json  tsconfig.json
visualizer/backend/src/: datasource.ts  index.ts  server.ts
visualizer/backend/src/controllers/: docs.ts  entities.ts  graph.ts  relations.ts
visualizer/backend/src/orms/: DocumentOrm.ts  (+4 more)
visualizer/frontend/: README.md  package-lock.json  package.json  tsconfig.json
visualizer/frontend/public/: index.html
visualizer/frontend/src/: App.css  App.tsx  index.css  index.tsx
visualizer/public/: index.html  manifest.json
visualizer/shared/types/: doc.ts  graph.ts  graphfilter.ts
visualizer/src/: App.tsx
visualizer/src/common/: LogarithmicRangeSlider.tsx
visualizer/src/datasources/: FileUploadComp.tsx  NdjsonFileUploadComp.tsx
visualizer/src/docs/: DocService.ts
visualizer/src/graph/: EdgeInfo.tsx  GraphFilterControlPanel.tsx  GraphOptionsControlPanel.tsx  GraphService.ts  GraphService.tsx  GraphViewer.tsx  NodeInfo.tsx  graph.css
visualizer/src/inspector/: DocInfo.tsx  EdgeInfo.tsx  NodeInfo.tsx  StatsInfo.tsx  docinfo.css
visualizer/src/service/: ServiceContextProvider.tsx
(+58 files in other folders)
