[metadata]
name = conspiracies
author = "Kenneth Enevoldsen, Lasse Hansen, Ekaterina Borisova, and Stephan Smuts",
description = Discover and examine conspiracies using natural language processing
license = CC-BY-SA-4.0
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
include_package_data = true
python_requires = >=3.7
zip_safe = false
install_requires =
    spacy>=3.1.0,<3.3.0
    spacy-transformers>=1.1.2,<1.2.0
    allennlp>=2.9.2,<2.10.0
    allennlp_models>=2.9.0,<2.10.0
    transformers>=4.11.3,<4.19.0
    numpy>=1.19.5,<1.24.0
    pandas>=1.1.5,<1.5.0
    torch>=1.6.0,<1.12.0

[bdist_wheel]
universal = true

[sdist]
formats = gztar

[flake8]
ignore = E203, E266, E501, E731, W503
max-line-length = 88
max-complexity = 10
select = B,C,E,F,W,T4,B9
exclude =
    .env,
    .git,
    __pycache__,

[mypy]
ignore_missing_imports = True
no_implicit_optional = True

[tool:pytest]
addopts=--verbose --durations=10 --color=yes -s -vv

[coverage:run]

[coverage:report]
omit =
    **/tests/*
    **/_vendorized/*
    **/about.py
exclude_lines =
    pragma: no cover
    # Don't complain about missing debug-only code:
    def __unicode__
    def __repr__
    if self\.debug
    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError
    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:
show_missing = True